# tycho-hedge

./: .dockerignore  .env.example  .gitignore  Dockerfile  PARAMETERS.md  README.md  STRATEGY.md  across_client.py  dashboard.py  docker-compose.yml  docker-entrypoint.sh  gas_manager.py  hyperliquid_client.py  main.py  requirements.txt  start_tycho_service.sh  tycho_client.py
abis/: SpokePool.json  WETH.json
rust-spot-executor/: Cargo.toml  pyproject.toml
rust-spot-executor/src/: lib.rs  spot_executor.rs  tycho_client.rs
tests/: test_bridge_roundtrip.py  test_hyperliquid.py  test_tycho_swap.py
tycho-simulation/examples/quickstart/: main.rs
tycho-simulation/src/: utils.rs
tycho-swap/: Cargo.toml
