[package]
name = "rust-spot-executor"
version = "0.1.0"
edition = "2021"
description = "Rust module for Tycho spot execution on Unichain for funding rate strategy"

[lib]
name = "rust_spot_executor"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Tycho dependencies - reuse from parent project
tycho-simulation = { path = "../../tycho-simulation", features = ["evm"] }
tycho-execution = "0.97.0"
tycho-common = "0.70.7"
tycho-client = "0.70.7"

# Async runtime
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"

# Error handling
thiserror = "1"
anyhow = "1.0.79"

# Ethereum integration
alloy = { version = "1.0.6", features = ["providers", "signer-local", "rpc-types-eth"] }
revm = { version = "24.0.0", features = ["alloydb", "serde"] }
foundry-config = "0.2.0"

# Numeric types
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2.17"

# Utility
hex = "0.4.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
tracing = "0.1.37"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[build-dependencies]
pyo3-build-config = "0.20"